data/derived/fa15/progs/unify/prog3046.ml.out
Characters 79-83:
  | hd::tl -> mulByDigit i tl @ [hd] * i;;
                                ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
